--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./dist/css/main.min.css">
-    <title>Document</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Poppins:300,400,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./dist/css/main.min.css">
+        <title>Document</title>
+    </head>
+    <body class="page">
+        <header class="page__header header">
 
-</body>
+        </header>
+
+
+        <main class=page__main>
+            <section class="page__section">
+                <p>Section 1</p>
+                <h1>Summer Surfing</h1>
+                <p><i class="icon-surf"></i></p>
+            </section>
+        </main>
+
+
+        <footer class="page__footer footer">
+
+        </footer>
+    </body>
 </html>
