--- a/index.html
+++ b/index.html
@@ -9,22 +9,49 @@
         <title>Document</title>
     </head>
     <body class="page">
-        <header class="page__header header">
+        <div class="container">
 
-        </header>
+            <!-- Header -->
+            <header class="page__header header">
+                <div class="header__logo">
+                    <i class="logo icon-surf"></i>
+                </div>
+                <nav class="header__nav site-nav">
+                    <ul class="site-nav__list">
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="#">Link 1</a>
+                        </li>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="#">Link 2</a>
+                        </li>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="#">Link 3</a>
+                        </li>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="#">Link 4</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header> <!-- Header END -->
 
 
-        <main class=page__main>
-            <section class="page__section">
-                <p>Section 1</p>
-                <h1>Summer Surfing</h1>
-                <p><i class="icon-surf"></i></p>
-            </section>
-        </main>
 
 
-        <footer class="page__footer footer">
+            <!-- Main -->
+            <main class="page__main">
+                <section class="page__section">
+                    <p>Section 1</p>
+                    <h1>Summer Surfing</h1>
+                    <p><i class="icon-surf"></i></p>
+                </section>
+            </main> <!-- Main END -->
 
-        </footer>
+
+            <!-- Footer -->
+            <footer class="page__footer footer">
+
+            </footer> <!-- Footer END -->
+        </div>
     </body>
 </html>
+
