Media Break Points

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                 <nav class="header__nav site-nav">
                     <ul class="site-nav__list">
                         <li class="site-nav__item">
-                            <a class="site-nav__link" href="#">Link 1</a>
+                            <a class="site-nav__link" href="#">Stories</a>
                         </li>
                         <li class="site-nav__item">
-                            <a class="site-nav__link" href="#">Link 2</a>
+                            <a class="site-nav__link" href="#">Events</a>
                         </li>
                         <li class="site-nav__item">
-                            <a class="site-nav__link" href="#">Link 3</a>
+                            <a class="site-nav__link" href="#">Places</a>
                         </li>
                         <li class="site-nav__item">
-                            <a class="site-nav__link" href="#">Link 4</a>
+                            <a class="site-nav__link" href="#">Boards</a>
                         </li>
                     </ul>
                 </nav>
@@ -40,9 +40,7 @@
             <!-- Main -->
             <main class="page__main">
                 <section class="page__section">
-                    <p>Section 1</p>
-                    <h1>Summer Surfing</h1>
-                    <p><i class="icon-surf"></i></p>
+                    <p>Dodel e aici</p>
                 </section>
             </main> <!-- Main END -->
 
