--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Document</title>
     </head>
     <body class="page">
-        <div class="container">
+        <div class="page__container">
 
             <!-- Header -->
             <header class="page__header header">
@@ -40,7 +40,14 @@
             <!-- Main -->
             <main class="page__main">
                 <section class="page__section">
-                    <p>Dodel e aici</p>
+                    <div class="hero">
+                        <div class="hero__text-container">
+                            stanga
+                        </div>
+                        <div class="hero__image-container">
+                            dreapta
+                        </div>
+                    </div>
                 </section>
             </main> <!-- Main END -->
 
@@ -53,3 +60,19 @@
     </body>
 </html>
 
+
+
+<!-- <div class="hero__text">
+    <div class="info-block">
+        <div class="info-block__subtitle">Your</div>
+        <h1 class="info-block__title info-block__title--underline">Summer Escape</h1>
+        <p class="info-block__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam reprehenderit corporis blanditiis cum consectetur illo?</p>
+        <div class="info-block__action">
+            <a href="#" class="info-block__link">Read more</a>
+        </div>
+    </div>
+</div>
+ -->
+
+
+<!-- <img src="./images/hero.jpg" alt="Your Summer Escape" class="hero__image"> -->
