--- a/index.html
+++ b/index.html
@@ -42,11 +42,34 @@
                 <section class="page__section">
                     <div class="hero">
                         <div class="hero__text-container">
-                            stanga
+                            <div class="hero__text">
+                                <div class="info-block">
+                                    <div class="info-block__subtitle">Your</div>
+                                    <h1 class="info-block__title info-block__title--underline">Summer Escape</h1>
+                                    <p class="info-block__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam reprehenderit corporis blanditiis cum consectetur illo?</p>
+                                    <div class="info-block__action">
+                                        <a href="#" class="info-block__link">Read more</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="hero__image-container">
-                            dreapta
+                            <img src="./images/hero1.jpg" alt="Your Summer Escape" class="hero__image">
                         </div>
+                    </div>
+                </section>
+
+
+                <section class="page__section">
+                    <div class="quote page__quote">
+                        <div class="quote__inner">
+                            <p class="quote__text">“Surfing is the most blissful experience you can have on this planet, a taste of heaven.”</p>
+                            <div class="quote__name">John McCarthy</div>
+                        </div>
+                    </div>
+
+                    <div class="vertical-line">
+                        <div class="vertical-line__object"></div>
                     </div>
                 </section>
             </main> <!-- Main END -->
@@ -60,19 +83,3 @@
     </body>
 </html>
 
-
-
-<!-- <div class="hero__text">
-    <div class="info-block">
-        <div class="info-block__subtitle">Your</div>
-        <h1 class="info-block__title info-block__title--underline">Summer Escape</h1>
-        <p class="info-block__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam reprehenderit corporis blanditiis cum consectetur illo?</p>
-        <div class="info-block__action">
-            <a href="#" class="info-block__link">Read more</a>
-        </div>
-    </div>
-</div>
- -->
-
-
-<!-- <img src="./images/hero.jpg" alt="Your Summer Escape" class="hero__image"> -->
