--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="./dist/css/vendors/flickity.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700|Poppins:300,400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700|Poppins:300,400,500,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./dist/css/main.min.css">
         <title>Document</title>
     </head>
@@ -21,27 +21,28 @@
                 <nav class="header__nav site-nav">
                     <ul class="site-nav__list">
                         <li class="site-nav__item">
-                            <a class="site-nav__link" href="#">Stories</a>
-                        </li>
-                        <li class="site-nav__item">
                             <a class="site-nav__link" href="#">Events</a>
-                        </li>
-                        <li class="site-nav__item">
-                            <a class="site-nav__link" href="#">Places</a>
                         </li>
                         <li class="site-nav__item">
                             <a class="site-nav__link" href="#">Boards</a>
                         </li>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="#">Stories</a>
+                        </li>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="#">Camp</a>
+                        </li>
                     </ul>
                 </nav>
-            </header> <!-- Header END -->
-        </div>
-
+            </header>
+        </div> <!-- Header END -->
 
 
 
         <!-- Main -->
         <main class="page__main">
+
+            <!-- Hero -->
             <section class="page__section">
                 <div class="page__container">
                     <div class="hero">
@@ -62,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> <!-- Hero END -->
 
 
             <!-- Quote 1 -->
@@ -106,7 +107,7 @@
 
 
             <!-- Boards Carousel -->
-            <section class="page__section">
+            <section class="page__section page__section--tall">
                 <div class="page__container page__container--large page__container--full-width">
                     <div class="page__section-heading">
                         <div class="info-block info-block--centered">
@@ -233,7 +234,98 @@
             </section> <!-- Boards Carousel END -->
 
 
+
+            <!-- Article 1 -->
+            <section class="page__section">
+                <div class="page__container">
+                    <article class="article">
+                        <div class="article__body article__body--left">
+                            <div class="info-block">
+                                <span class="info-block__background-number info-block__background-number--right">01</span>
+                                <h1 class="info-block__title info-block__title--underline">Summer Escape</h1>
+                                <p class="info-block__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam reprehenderit corporis blanditiis cum consectetur illo?</p>
+                                <div class="info-block__action">
+                                    <a href="#" class="info-block__link">Read more</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="article__media">
+                            <img class="article__image" src="./images/img3.jpg" alt="">
+                        </div>
+                    </article>
+                </div>
+            </section> <!-- Article 1 END -->
+
+            <!-- Article 2 -->
+            <section class="page__section">
+                <div class="page__container page__container--small">
+                    <article class="article article--inverted">
+                        <div class="article__media">
+                            <img class="article__image" src="./images/img4.jpg" alt="">
+                        </div>
+                        <div class="article__body article__body--right">
+                            <div class="info-block">
+                                <span class="info-block__background-number info-block__background-number--left">02</span>
+                                <h1 class="info-block__title info-block__title--underline">Summer Escape</h1>
+                                <p class="info-block__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam reprehenderit corporis blanditiis cum consectetur illo?</p>
+                                <div class="info-block__action">
+                                    <a href="#" class="info-block__link">Read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </section> <!-- Article 2 END -->
+
+
+            <!-- Subscribe Area -->
+            <section class="page__section">
+                <div class="page__subscribe-area">
+                    <div class="separator page__separator">
+                        <div class="separator__line"></div>
+                    </div>
+                    <div class="subscribe">
+                        <div class="subscribe__body">
+                            <div class="info-block">
+                                <h1 class="info-block__title">Summer Escape</h1>
+                                <p class="info-block__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam reprehenderit corporis blanditiis cum consectetur illo?</p>
+                            </div>
+                        </div>
+                        <form class="subscribe__form" action="#">
+                            <input class="subscribe__input" type="text" placeholder="Your e-mail">
+                            <button class="subscribe__button">
+                                <svg class="subscribe__arrow" viewBox="0 0 100 100">
+                                    <path d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z" class="arrow" transform="translate(100, 100) rotate(180) "></path>
+                                </svg>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </section> <!-- Subscribe Area END -->
+
+
+            <section class="page__section">
+                <div class="footer-article">
+                    <div class="footer-article__media">
+                        <img class="footer-article__image" src="./images/img9.jpg" alt="">
+                    </div>
+                    <div class="footer-article__body-container">
+                        <div class="footer-article__body">
+                            <p class="footer-article__tagline">Our camp</p>
+                            <p class="footer-article__title">18 Fletcher St, Byron Bay NSW 2481, Australia</p>
+                            <div class="footer-article__action">
+                                <a class="footer-article__link" href="#">Get in touch</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
         </main> <!-- Main END -->
+
+
 
         <!-- Footer -->
         <footer class="page__footer footer">
