--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="./dist/css/vendors/flickity.min.css">
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,600,700|Poppins:300,400,500,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./dist/css/main.min.css">
-        <title>Document</title>
+        <title>Summer Surfing</title>
+        <script src="https://kit.fontawesome.com/672b1edbdf.js" crossorigin="anonymous"></script>
     </head>
     <body class="page">
 
@@ -35,7 +36,7 @@
                     </ul>
                 </nav>
             </header>
-        </div> <!-- Header END -->
+        </div> <!-- Header -END- -->
 
 
 
@@ -63,7 +64,7 @@
                         </div>
                     </div>
                 </div>
-            </section> <!-- Hero END -->
+            </section> <!-- Hero -END- -->
 
 
             <!-- Quote 1 -->
@@ -80,7 +81,7 @@
                         <div class="separator__line"></div>
                     </div>
                 </div>
-            </section> <!-- Quote 1 END -->
+            </section> <!-- Quote 1 -END- -->
 
 
             <!-- Showcase -->
@@ -103,7 +104,7 @@
                         </div>
                     </div>
                 </div>
-            </section> <!-- Showcase END -->
+            </section> <!-- Showcase -END- -->
 
 
             <!-- Boards Carousel -->
@@ -231,7 +232,7 @@
                         </div>
                     </div>
                 </div>
-            </section> <!-- Boards Carousel END -->
+            </section> <!-- Boards Carousel -END- -->
 
 
 
@@ -254,7 +255,7 @@
                         </div>
                     </article>
                 </div>
-            </section> <!-- Article 1 END -->
+            </section> <!-- Article 1 -END- -->
 
             <!-- Article 2 -->
             <section class="page__section">
@@ -275,7 +276,7 @@
                         </div>
                     </article>
                 </div>
-            </section> <!-- Article 2 END -->
+            </section> <!-- Article 2 -END- -->
 
 
             <!-- Subscribe Area -->
@@ -301,9 +302,10 @@
                         </form>
                     </div>
                 </div>
-            </section> <!-- Subscribe Area END -->
+            </section> <!-- Subscribe Area -END- -->
 
 
+            <!-- Our Camp Block -->
             <section class="page__section">
                 <div class="footer-article">
                     <div class="footer-article__media">
@@ -319,18 +321,43 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> <!-- Our Camp -END- -->
 
 
 
-        </main> <!-- Main END -->
+        </main> <!-- Main -END- -->
 
 
 
         <!-- Footer -->
-        <footer class="page__footer footer">
-
-        </footer> <!-- Footer END -->
+        <div class="page__container">
+            <footer class="page__footer footer">
+                <div class="footer__logo">
+                    <i class="logo icon-surf"></i>
+                </div>
+                <nav class="footer__nav site-nav site-nav--centered site-nav--wide">
+                    <ul class="site-nav__list">
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="#">Events</a>
+                        </li>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="#">Boards</a>
+                        </li>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="#">Stories</a>
+                        </li>
+                        <li class="site-nav__item">
+                            <a class="site-nav__link" href="#">Camp</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="footer__social-icons social">
+                    <a class="social__link" href="https://www.tumblr.com/"><i class="fab fa-tumblr social__icon"></i></a>
+                    <a class="social__link" href="https://twitter.com/"><i class="fab fa-twitter social__icon"></i></a>
+                    <a class="social__link" href="https://vimeo.com/"><i class="fab fa-vimeo-v social__icon"></i></a>
+                </div>
+            </footer> 
+        </div> <!-- Footer -END- -->
 
         <script src="./dist/js/vendors/flickity.min.js"></script>
         <script src="./dist/js/main.js"></script>
