--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                             <img class="hero__image" src="./images/hero.jpg" alt="Your Summer Escape">
                         </div>
                     </div>
+                    <div class="page__section-sidetext page__section-sidetext--right">
+                        First surfing magazine
+                    </div>
                 </div>
             </section> <!-- Hero -END- -->
 
